k8s/Sample2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-deployment
  namespace: anwb-playground
  labels:
    app: microservice

spec:
  template:
    metadata:
      labels:
        app: microservice
    spec:
      containers:
      - name: microservice
        image: <image name>:<image tag>
        ports:
        - name: http
          containerPort: 80
        livenessProbe:
          httpGet:
            path: /self
            port: http
          initialDelaySeconds: 20
          periodSeconds: 5
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /ready
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 2
