k8s/Sample2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-service
  namespace: anwb-playground

spec:
  selector:
    app: microservice
  ports:
  - name: http
    protocol: TCP
    port: 80
