k8s/Sample2/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: microservice-ingress
  namespace: anwb-playground
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: "nginx"

spec:
  rules:
  - http:
      paths:
      - path: "/(microservice/.*)"
        backend:
          serviceName: microservice-service
          servicePort: http
